<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="add_transaction">Add transaction</string>
    <string name="hello_nikhil">Hello, Nikhil</string>
    <string name="food">Food</string>
    <string name="tea_break">Tea break</string>
    <string name="you_do_not_have_any_transactions">You do not have any transactions</string>
    <string name="payee_name">Payee name</string>
    <string name="amount_paid">Amount paid</string>
    <string name="debit">DEBIT</string>
    <string name="credit">CREDIT</string>
    <string name="add">Add</string>
    <string name="date">Date</string>
    <string name="category">Category</string>
    <string name="category_icon">Category Icon</string>
    <string name="edit_transaction">Edit transaction</string>
    <string name="delete_transaction">Delete transaction</string>
    <string name="save">Save</string>
    <string name="clear_data">Clear data</string>
    <string name="clear_all_app_data">Clear all app data</string>
    <string name="month">Month</string>
    <string name="settings">Settings</string>
    <string name="settings_icon">Settings Icon</string>
    <string name="balance">Balance</string>
    <string name="expense">Expense</string>
    <string name="no_transactions">No transactions</string>
    <string name="user_name">User name</string>
    <string name="what_should_we_call_you">What should we call you?</string>
    <string name="your_name">Your Name</string>
    <string name="current_month">Current month</string>
    <string name="january">January</string>
    <string name="reports">Reports</string>
    <string name="update_transaction">Update transaction</string>
    <string name="export_data">Export Data</string>
    <string name="bank_name">Bank name</string>
    <string name="update">Update</string>
    <string name="edit_multiple_transactions">Edit multiple transactions</string>
    <string name="select_all_transactions">Select all transactions</string>
    <string name="delete_all_transactions">Delete all transactions</string>
    <string name="close_multi_edit_mode">Close multi edit mode</string>
    <string name="emoji">Emoji</string>
    <string name="multi_select">Multi Select</string>
    <string name="bulk_update">Bulk update</string>
    <string name="clear_multi_select">Clear multi select</string>
    <string name="multi_update">Multi update</string>
    <string name="you_have_no_transactions_on_this_month">You have no transactions on this month</string>
    <string name="you_have_spent_the_most_on">You have spent the most on</string>
    <string name="about_app">About app</string>
    <string name="share_app">Share app</string>
    <string name="custom_expense">Custom Expense</string>
    <string name="import_data">Import Data</string>
    <string name="close_filter">Close filter</string>
    <string name="apply_filter">Apply filter</string>
    <string name="year">Year</string>
    <string name="clear_filter">Clear filter</string>
</resources>