<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/settingsTab"
        android:contentDescription="@string/settings_icon"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/reportTab"
        android:contentDescription="@string/reports"
        android:icon="@drawable/ic_baseline_bar_chart_24"
        android:title="@string/reports"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/export"
        android:contentDescription="@string/export_data"
        android:title="@string/export_data"
        android:icon="@drawable/ic_baseline_import_export_24"
        app:showAsAction="ifRoom" />

</menu>