<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <!--    Heading-->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/interbold"
        android:text="@string/add_transaction"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <!--    Transaction type    -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/transactionTypeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:weightSum="2">

        <TextView
            android:id="@+id/typeCredit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/interbold"
            android:text="@string/credit"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/typeDebit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/red"
            android:fontFamily="@font/interbold"
            android:text="@string/debit"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <!--  Category  -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/categoryLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/transactionTypeGroup"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/category"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/ic_baseline_category_24">

        <AutoCompleteTextView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/secondary"
            android:inputType="none"
            android:labelFor="@+id/categoryLayout"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--    Date    -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/categoryLayout"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/date"
        app:boxBackgroundColor="@color/secondary"
        app:errorEnabled="true"
        app:hintTextColor="@color/white"
        app:startIconDrawable="@drawable/ic_round_calendar_today_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--    Payee name  -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/payeeNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dateLayout"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/payee_name"
        app:boxBackgroundColor="@color/secondary"
        app:errorEnabled="true"
        app:hintTextColor="@color/white"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/payeeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--    Amount paid     -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amountPaidLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/payeeNameLayout"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/amount_paid"
        app:boxBackgroundColor="@color/secondary"
        app:errorEnabled="true"
        app:hintTextColor="@color/white"
        app:startIconDrawable="@drawable/ic_baseline_account_balance_wallet_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amountPaid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--    Add transaction     -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/addTransaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/amountPaidLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/add" />

</RelativeLayout>