<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        app:flexDirection="row"
        app:justifyContent="space_between">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/interbold"
            android:text="@string/hello_nikhil"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

    </com.google.android.flexbox.FlexboxLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/dashboardCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_margin="30dp"
        android:backgroundTint="@color/primary"
        android:elevation="15dp"
        app:cardCornerRadius="15dp">

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="25dp"
            app:alignItems="center"
            app:flexDirection="column">

            <TextView
                android:id="@+id/currentMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/interbold"
                android:text="September"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/currentAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/interbold"
                android:text="₹50000"
                android:textColor="@color/white"
                android:textSize="35sp"
                tools:ignore="HardcodedText" />

        </com.google.android.flexbox.FlexboxLayout>

    </com.google.android.material.card.MaterialCardView>

    <RelativeLayout
        android:id="@+id/noTransactionsLayer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/dashboardCard"
        android:backgroundTint="@color/secondary"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/you_do_not_have_any_transactions"
            android:textColor="@color/white" />

    </RelativeLayout>

    <ListView
        android:id="@+id/transactionList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/dashboardCard"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="90dp"
        android:visibility="visible"
        tools:listitem="@layout/list_item" />


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:backgroundTint="@color/secondary" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addTransactionBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:contentDescription="@string/add_transaction"
            app:borderWidth="0dp"
            app:layout_anchor="@id/bottomAppBar"
            app:srcCompat="@drawable/ic_add" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</RelativeLayout>